test/compile_errors/err_goto_skip_defer.w
//! expect-check-fail: goto would skip deferred cleanup registration

fn main:
    goto 'after
    defer: print("cleanup")
    'after return
